# ytm-playlist

./: .flake8  .gitignore  LICENSE  README.md  isort.cfg  log_config.yml  pyproject.toml  pytest.ini  setup.cfg
src/xdh/ytmp/: get_tracks.py
