[tool.poetry]
name = "ytm-playlist"
version = "0.1.0"
description = "YouTube Music Automatic Playlist Generator"
authors = ["Cliff Hill <xlorep@darkhelm.org>"]
license = "MIT License"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.poetry.dependencies]
python = "^3.8"
ytmusicapi = "^0.9.2"
config-path = "^1.0.0"

[tool.poetry.dev-dependencies]
wheel = "^0.35.1"
jupyter = "^1.0.0"
flake8-2020 = "^1.6.0"
flake8-aaa = "^0.11.0"
flake8-absolute-import = "^1.0"
flake8-alfred = "^1.1.1"
flake8-annotations-complexity = "^0.0.5"
flake8-annotations = "^2.3.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^3.2.3"
flake8-copyright = "^0.2.2"
flake8-debugger = "^3.2.1"
flake8-deprecated = "^1.3"
flake8-docstrings = "^1.5.0"
flake8-executable = "^2.0.4"
flake8-expression-complexity = "^0.0.8"
flake8-fixme = "^1.1.1"
flake8-functions = "^0.0.4"
flake8-logging-format = "^0.6.0"
flake8-mock = "^0.3"
flake8-mutable = "^1.2.0"
flake8-mypy = "^17.8.0"
flake8-ownership = "^2.0.1"
flake8-print = "^3.1.4"
flake8-pyi = "^20.5.0"
flake8-pytest = "^1.3"
flake8-pytest-style = "^1.2.3"
flake8-rst = "^0.7.2"
flake8-rst-docstrings = "^0.0.13"
flake8-strict = "^0.2.1"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.1.0"
flake8-use-fstring = "^1.1"
flake8-variables-names = "^0.0.3"
pep8-naming = "^0.11.1"
flake8-bandit = "^2.1.2"
rstcheck = "^3.3.1"
yamllint = "^1.24.2"
flake8 = "^3.8.3"
mypy = "^0.782"
bandit = "^1.6.2"
isort = "^5.4.2"
black = "^20.8b1"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
